# the_pear

./: .gitignore  Cargo.toml  README.md  the_pear  usr_requests.txt
.github/workflows/: keepalive.yml
bot_storage/: encrypted.txt  permission_to_decrypt.txt
src/: file_dl.rs  main.rs  parse.rs
src/commands/: ask.rs  crypting.rs  gif.rs  mod.rs  pear.rs
src/util/: ai.rs  mod.rs
