[package]
name = "the_pear_dcbot"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = { version = "0.12", features = ["client", "gateway", "rustls_backend"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12", features = ["json"] }
dotenv = "0.15"
serde_json = "1.0"
poise = "0.6.1"
regex = "1.12.2"
axum = "0.8.6"
simple_db = "0.1.2"
chrono = "0.4.42"
rand = "0.9.2"
